@@ -7,7 +7,12 @@ import javafx.scene.control.PasswordField;
 import javafx.scene.control.TextField;
 import org.library.system.dao.UserDao;
 import org.library.system.model.User;
-import org.library.system.utils.*;
+import org.library.system.utils.AlertUtils;
+import org.library.system.utils.AppStatus;
+import org.library.system.utils.PasswordUtil;
+import org.library.system.utils.SceneManager;
+import org.library.system.utils.SessionManager;
+import org.library.system.utils.Validations;
 
 import java.sql.SQLException;
 import java.util.Optional;
@@ -20,26 +25,49 @@ public class LoginController {
     @FXML private Hyperlink hlRegister;
 
     private final UserDao userDao = new UserDao();
-
+    private final Validations validations = Validations.getInstancevalidations();
 
     @FXML
     public void initialize() {
-        // Inicializacion del controlador
+        // Inicialización del controlador
     }
 
     @FXML
     private void handleLogin() {
-        if (txtEmail.getText() == null || txtEmail.getText().isBlank()) return;
-        if (txtPassword.getText() == null || txtPassword.getText().isBlank()) return;
+        String email = txtEmail.getText();
+        String password = txtPassword.getText();
+
+        // Validar campos vacíos
+        if (email == null || email.trim().isEmpty()
+                || password == null || password.trim().isEmpty()) {
+            AlertUtils.instanceAlert().show(AppStatus.INVALID_INPUT,
+                    "Debe ingresar correo y contraseña.");
+            return;
+        }
+
+        // Validar formato del correo
+        if (!validations.validateEmail(email.trim())) {
+            AlertUtils.instanceAlert().show(AppStatus.INVALID_INPUT,
+                    "Formato no válido para el email.");
+            return;
+        }
 
         try {
-            Optional<User> userOpt = userDao.loginByEmail(txtEmail.getText().trim().toLowerCase());
+            Optional<User> userOpt = userDao.loginByEmail(email.trim().toLowerCase());
 
-            if (userOpt.isEmpty()) return;
+            if (userOpt.isEmpty()) {
+                AlertUtils.instanceAlert().show(AppStatus.NOT_FOUND,
+                        "Usuario no encontrado o inactivo.");
+                return;
+            }
 
             User user = userOpt.get();
 
-            if (!PasswordUtil.verify(txtPassword.getText(), user.getPassword_hash())) return;
+            if (!PasswordUtil.verify(password, user.getPassword_hash())) {
+                AlertUtils.instanceAlert().show(AppStatus.UNAUTHORIZED,
+                        "Credenciales incorrectas.");
+                return;
+            }
 
             SessionManager.getInstance().login(user, user.getPassword_hash());
 
@@ -48,7 +76,8 @@ public class LoginController {
             );
 
         } catch (SQLException e) {
-            AlertUtils.instanceAlert().show(AppStatus.UNEXPECTED_ERROR, null);
+            AlertUtils.instanceAlert().show(AppStatus.DATABASE_UNAVAILABLE,
+                    "Error de base de datos: " + e.getMessage());
         }
     }
 
